# lawdit2

./: .dockerignore  .env.example  .gitignore  Dockerfile  I can see you're building the criti.txt  LICENSE  Let me walk you through implementin.txt  Makefile  README.md  This is a beautifully architected s.txt  USAGE_GUIDE.md  WEB_INTERFACE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_web.sh  setup.py
examples/: README.md  generate_deliverables_example.py  run_analysis_example.py
examples/mock_data_room_india/: README.md
examples/mock_data_room_india/contracts/: employment_agreement_template.txt  master_services_agreement_customer.txt  vendor_agreement_cloud_services.txt
examples/mock_data_room_india/corporate/: articles_of_association.txt  board_resolution_2024.txt  certificate_of_incorporation.txt  memorandum_of_association.txt  shareholding_pattern.txt
examples/mock_data_room_india/financial/: balance_sheet_2023_24.txt  gst_annual_return_2023_24.txt  income_tax_return_2023_24.txt  profit_loss_statement_2023_24.txt
examples/mock_data_room_india/hr/: employee_handbook_policies.txt
examples/mock_data_room_india/intellectual_property/: trademark_registration.txt
examples/mock_data_room_india/legal/: office_lease_agreement.txt
examples/mock_data_room_india/regulatory/: epf_esi_registration.txt  gst_registration_certificate.txt  pan_tan_certificates.txt  shops_and_establishment_license.txt
src/lawdit/: __init__.py  config.py
src/lawdit/agents/: __init__.py  cli.py  legal_risk_agent.py  prompts.py
src/lawdit/indexer/: __init__.py  cli.py  data_room_indexer.py  google_drive_client.py  pdf_processor.py  vision_summarizer.py
src/lawdit/tools/: __init__.py  document_tools.py
src/lawdit/utils/: __init__.py  document_generator.py
src/lawdit/web/: __init__.py  app.py  cli.py
src/lawdit/web/pages/: __init__.py  analyzer.py  configuration.py  indexer.py  reports.py  results.py
tests/: __init__.py  test_agents_cli.py  test_config.py  test_data_room_indexer.py  test_document_generator.py  test_document_tools.py  test_google_drive_client.py  test_indexer.py  test_legal_risk_agent.py  test_pdf_processor.py  test_vision_summarizer.py
